RESOLVED FIXED109386
gtk/DumpRenderTree.cpp is missing <locale.h> include
https://bugs.webkit.org/show_bug.cgi?id=109386
Summary gtk/DumpRenderTree.cpp is missing <locale.h> include
Jeremy Huddleston Sequoia
Reported 2013-02-10 13:25:35 PST
DumpRenderTree.cpp uses setlocale() and LC_ALL. You need to #include <locale.h> for that. --- Tools/DumpRenderTree/gtk/DumpRenderTree.cpp.orig 2013-02-10 11:47:57.000000000 -0800 +++ Tools/DumpRenderTree/gtk/DumpRenderTree.cpp 2013-02-10 11:48:44.000000000 -0800 @@ -50,6 +50,7 @@ #include <cstring> #include <getopt.h> #include <gtk/gtk.h> +#include <locale.h> #include <webkit/webkit.h> #include <wtf/Assertions.h> #include <wtf/gobject/GOwnPtr.h>
Attachments
Jeremy Huddleston Sequoia
Comment 1 2013-02-10 13:26:29 PST
This is with 1.11.4
Martin Robinson
Comment 2 2013-02-21 09:54:39 PST
Note You need to log in before you can comment on or make changes to this bug.