gtk/DumpRenderTree.cpp is missing <locale.h> include https://bugs.webkit.org/show_bug.cgi?id=109386

* DumpRenderTree/gtk/DumpRenderTree.cpp: Fix the WebKitGTK+ Mac build
by include locale.h when we use setlocale.

git-svn-id: svn://svn.chromium.org/blink/trunk@143620 bbb929c8-8fbe-4397-9dbb-9b2b20218538